# zilch-editor-old

./: .editorconfig  .gitignore  CHANGELOG  CHANGELOG.RELEASE  CMakeLists.txt  LICENSE.zlib  README.md  STYLE.md  ZilchEditor.pro  ZilchEditor.pro.user.4.8-pre1  ZilchEditor.qrc  appveyor.yml  build.win64.bat  zilch-editor.code-workspace  zilch-editor.rc
editor/: Define.h
editor/logger/: Logger.h
editor/scratch/: Scratch.h  ScratchBlock.cpp  ScratchBlock.h  ScratchBlockCategory.h  ScratchBlockPrototype.cpp  ScratchCostume.h  ScratchResource.cpp  ScratchResource.h  ScratchSprite.cpp  ScratchStage.h
editor/stylesheet/: stylesheet.cpp
editor/util/: Crash.h  Resource.cpp  Util.h
editor/widget/: BlockItem.cpp  BlockItem.h  BlockTabItem.cpp  BlockTabItem.h  CostumePart.cpp  EditArea.cpp  MainWindow.cpp  ScriptPart.cpp  ScriptPart.h  SpriteArea.h  SpriteItem.cpp  SpriteItem.h  SpriteListItem.cpp  SpriteListItem.h  StageArea.h  Widget.cpp
plugin/: EventSystem.js  ScratchPlugin.js
plugin/scratch/: ScratchBlock.js  ScratchBlockCategory.js  ScratchBlockPrototype.js
plugin/widget/: Pos.js  Widget.js
src/: Define.h  Main.cpp
src/logger/: CLogger.cpp  CLogger.h  Logger.cpp  Logger.h
src/plugin/: PluginBase.cpp  PluginBase.h  PluginPrototype.cpp  PluginPrototype.h
src/scratch/: Scratch.cpp  Scratch.h  ScratchBlock.cpp  ScratchBlock.h  ScratchBlockCategory.cpp  ScratchBlockCategory.h  ScratchBlockPrototype.cpp  ScratchBlockPrototype.h  ScratchCostume.cpp  ScratchCostume.h  ScratchObject.cpp  ScratchObject.h  ScratchPlugin.cpp  ScratchPlugin.h  ScratchResource.cpp  ScratchResource.h  ScratchResourse.cpp  ScratchResourse.h  ScratchSprite.cpp  ScratchSprite.h  ScratchStage.cpp  ScratchStage.h
src/stylesheet/: stylesheet.cpp  stylesheet.h
src/translator/: Translator.cpp  Translator.h
src/updater/: Updater.cpp  Updater.h
src/util/: Crash.c  Crash.h  FileDownloader.cpp  FileDownloader.h  Resource.cpp  Resource.h  Resourse.cpp  Resourse.h  Thread.cpp  Thread.h  Util.cpp  Util.h  VersionInfo.cpp  VersionInfo.h
src/widget/: About.cpp  About.h  BlockItem.cpp  BlockItem.h  BlockTabItem.cpp  BlockTabItem.h  CostumePart.cpp  CostumePart.h  EditArea.cpp  EditArea.h  LanguageAction.cpp  LanguageAction.h  MainWindow.cpp  MainWindow.h  ObjectItem.cpp  ObjectItem.h  ObjectListItem.cpp  ObjectListItem.h  ScriptPart.cpp  ScriptPart.h  SpriteArea.cpp  SpriteArea.h  SpriteItem.cpp  SpriteItem.h  SpriteListItem.cpp  SpriteListItem.h  StageArea.cpp  StageArea.h  StageItem.cpp  StageItem.h  StageListItem.cpp  StageListItem.h  StageView.cpp  StageView.h  Widget.cpp  Widget.h
src/widget/costumepart/: CostumeList.cpp  CostumeList.h  CostumeListItem.cpp  CostumeListItem.h  CostumeNew.cpp  CostumeNew.h  CostumePart.cpp  CostumePart.h  CostumeView.cpp  CostumeView.h  CostumeView.h.autosave
src/widget/scriptpart/: BlockTabItem.cpp  BlockTabItem.h  ScriptPart.cpp  ScriptPart.h  ScriptPartBlockTab.cpp  ScriptPartBlockTab.h  ScriptPartBlockView.cpp  ScriptPartBlockView.h  ScriptPartEdit.cpp  ScriptPartEdit.h
src/widget/setting/: SettingStyle.cpp  SettingStyle.h  SettingWidget.cpp  SettingWidget.h
test/PNG24Encoder/: ByteArray.py  CRC32.py  Integer.py  PNG24Encoder.py  PNGEncoder.py
test/filedownload/: CMakeLists.txt  app.cpp  app.h  main.cpp
